--- a/PackagesD2009/PngComponents.dproj
+++ b/PackagesD2009/PngComponents.dproj
@@ -1,14 +1,10 @@
 ﻿	<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 		<PropertyGroup>
-			<ProjectGuid>{B3C4180B-520B-41C8-8853-0351F059AA78}</ProjectGuid>
-			<MainSource>PngComponentsDesign.dpk</MainSource>
+			<ProjectGuid>{FC9C2870-1E57-44A2-9558-53E6A0A9BC9C}</ProjectGuid>
+			<MainSource>PngComponents.dpk</MainSource>
 			<Config Condition="'$(Config)'==''">Release</Config>
 			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-			<ProjectVersion>12.3</ProjectVersion>
-			<Basis>True</Basis>
-			<Platform>Win32</Platform>
-			<AppType>Package</AppType>
-			<FrameworkType>None</FrameworkType>
+			<ProjectVersion>12.0</ProjectVersion>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Config)'=='Basis' or '$(Base)'!=''">
 			<Base>true</Base>
@@ -24,23 +20,19 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DesignOnlyPackage>true</DesignOnlyPackage>
-			<DCC_ImageBase>00400000</DCC_ImageBase>
-			<DCC_DebugInformation>false</DCC_DebugInformation>
-			<DllSuffix>150</DllSuffix>
+			<DCC_DependencyCheckOutputName>C:\Users\Public\Documents\RAD Studio\6.0\Bpl\PngComponents120.bpl</DCC_DependencyCheckOutputName>
+			<DesignOnlyPackage>false</DesignOnlyPackage>
+			<RuntimeOnlyPackage>true</RuntimeOnlyPackage>
 			<DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
-			<DCC_Platform>x86</DCC_Platform>
-			<DCC_DependencyCheckOutputName>C:\Users\Public\Documents\RAD Studio\7.0\Bpl\PngComponentsDesign140.bpl</DCC_DependencyCheckOutputName>
-			<DCC_Description>Png components designtime</DCC_Description>
-			<DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
-			<DCC_N>false</DCC_N>
-			<DCC_K>false</DCC_K>
-			<GenDll>true</GenDll>
-			<DCC_S>false</DCC_S>
-			<DCC_DcuOutput>..\D15</DCC_DcuOutput>
+			<DCC_Description>Png Components</DCC_Description>
+			<DllSuffix>120</DllSuffix>
 			<GenPackage>true</GenPackage>
-			<DCC_F>false</DCC_F>
-			<DCC_E>false</DCC_E>
+			<DCC_DcuOutput>..\D12\$(Config)</DCC_DcuOutput>
+			<GenDll>true</GenDll>
+			<DCC_DebugInformation>false</DCC_DebugInformation>
+			<DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
+			<DCC_ImageBase>00400000</DCC_ImageBase>
+			<DCC_Platform>x86</DCC_Platform>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Cfg_1)'!=''">
 			<DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -52,40 +44,45 @@
 			<DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
 		</PropertyGroup>
 		<ItemGroup>
-			<DelphiCompile Include="PngComponentsDesign.dpk">
+			<DelphiCompile Include="PngComponents.dpk">
 				<MainSource>MainSource</MainSource>
 			</DelphiCompile>
-			<DCCReference Include="..\Design\PngComponents.dcr"/>
-			<DCCReference Include="designide.dcp"/>
-			<DCCReference Include="PngComponents.dcp"/>
-			<DCCReference Include="..\Design\PngComponentsRegister.pas"/>
-			<DCCReference Include="..\Design\PngComponentEditors.pas"/>
-			<DCCReference Include="..\Design\PngImageListEditor.pas">
-				<Form>PngImageListEditorDlg</Form>
-			</DCCReference>
+			<DCCReference Include="vclactnband.dcp"/>
+			<DCCReference Include="vcl.dcp"/>
+			<DCCReference Include="rtl.dcp"/>
+			<DCCReference Include="vclimg.dcp"/>
+			<DCCReference Include="..\Source\PngSpeedButton.pas"/>
+			<DCCReference Include="..\Source\PngFunctions.pas"/>
+			<DCCReference Include="..\Source\PngImageList.pas"/>
+			<DCCReference Include="..\Source\PngBitBtn.pas"/>
+			<DCCReference Include="..\Source\PngButtonFunctions.pas"/>
+			<DCCReference Include="..\Source\PngCheckListBox.pas"/>
+			<BuildConfiguration Include="Basis">
+				<Key>Base</Key>
+			</BuildConfiguration>
 			<BuildConfiguration Include="Debug">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
-			</BuildConfiguration>
-			<BuildConfiguration Include="Basis">
-				<Key>Base</Key>
 			</BuildConfiguration>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_1</Key>
 				<CfgParent>Base</CfgParent>
 			</BuildConfiguration>
 		</ItemGroup>
-		<Import Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')" Project="$(BDS)\Bin\CodeGear.Delphi.Targets"/>
-		<Import Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')" Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj"/>
+		<Import Project="$(BDS)\Bin\CodeGear.Delphi.Targets" Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')"/>
 		<ProjectExtensions>
 			<Borland.Personality>Delphi.Personality.12</Borland.Personality>
 			<Borland.ProjectType>Package</Borland.ProjectType>
 			<BorlandProject>
 				<Delphi.Personality>
 					<Source>
-						<Source Name="MainSource">PngComponentsDesign.dpk</Source>
+						<Source Name="MainSource">PngComponents.dpk</Source>
 					</Source>
-					<Parameters/>
+					<Parameters>
+						<Parameters Name="UseLauncher">False</Parameters>
+						<Parameters Name="LoadAllSymbols">True</Parameters>
+						<Parameters Name="LoadUnspecifiedSymbols">False</Parameters>
+					</Parameters>
 					<VersionInfo>
 						<VersionInfo Name="IncludeVerInfo">True</VersionInfo>
 						<VersionInfo Name="AutoIncBuild">False</VersionInfo>
@@ -103,20 +100,23 @@
 					</VersionInfo>
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName"/>
-						<VersionInfoKeys Name="FileDescription">Png Components Design Time</VersionInfoKeys>
+						<VersionInfoKeys Name="FileDescription">Png Components Runtime</VersionInfoKeys>
 						<VersionInfoKeys Name="FileVersion">1.2.0.0</VersionInfoKeys>
-						<VersionInfoKeys Name="InternalName">PngComponentsDesign</VersionInfoKeys>
+						<VersionInfoKeys Name="InternalName">PngComponents</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalCopyright"/>
 						<VersionInfoKeys Name="LegalTrademarks"/>
-						<VersionInfoKeys Name="OriginalFilename">PngComponentsDesign</VersionInfoKeys>
+						<VersionInfoKeys Name="OriginalFilename">PngComponents</VersionInfoKeys>
 						<VersionInfoKeys Name="ProductName">Png Components</VersionInfoKeys>
 						<VersionInfoKeys Name="ProductVersion">1</VersionInfoKeys>
 						<VersionInfoKeys Name="Comments"/>
 					</VersionInfoKeys>
+					<Excluded_Packages>
+						<Excluded_Packages Name="$(BDS)\bin\bcboffice2k120.bpl">CodeGear C++Builder Office 2000-Server-Package</Excluded_Packages>
+						<Excluded_Packages Name="$(BDS)\bin\bcbofficexp120.bpl">CodeGear C++Builder Office XP-Server-Package</Excluded_Packages>
+						<Excluded_Packages Name="$(BDS)\bin\dcloffice2k120.bpl">Microsoft Office 2000 Beispiele für gekapselte Komponenten für Automation Server</Excluded_Packages>
+						<Excluded_Packages Name="$(BDS)\bin\dclofficexp120.bpl">Microsoft Office XP Beispiele für gekapselte Komponenten für Automation Server</Excluded_Packages>
+					</Excluded_Packages>
 				</Delphi.Personality>
-				<Platforms>
-					<Platform value="Win32">True</Platform>
-				</Platforms>
 			</BorlandProject>
 			<ProjectFileVersion>12</ProjectFileVersion>
 		</ProjectExtensions>
