--- a/PackagesXE/PngComponents.dproj
+++ b/PackagesXE/PngComponents.dproj
@@ -1,14 +1,14 @@
 ﻿	<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 		<PropertyGroup>
-			<ProjectGuid>{B3C4180B-520B-41C8-8853-0351F059AA78}</ProjectGuid>
-			<MainSource>PngComponentsDesign.dpk</MainSource>
-			<Config Condition="'$(Config)'==''">Release</Config>
-			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-			<ProjectVersion>12.3</ProjectVersion>
+			<ProjectGuid>{3A97E0BB-4EBC-4543-9E3B-E7DB8412AF40}</ProjectGuid>
+			<MainSource>PngComponents.dpk</MainSource>
 			<Basis>True</Basis>
+			<Config Condition="'$(Config)'==''">Release</Config>
 			<Platform>Win32</Platform>
 			<AppType>Package</AppType>
-			<FrameworkType>None</FrameworkType>
+			<FrameworkType>VCL</FrameworkType>
+			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
+			<ProjectVersion>12.3</ProjectVersion>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Config)'=='Basis' or '$(Base)'!=''">
 			<Base>true</Base>
@@ -24,45 +24,45 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DesignOnlyPackage>true</DesignOnlyPackage>
-			<DCC_ImageBase>00400000</DCC_ImageBase>
-			<DCC_DebugInformation>false</DCC_DebugInformation>
 			<DllSuffix>150</DllSuffix>
-			<DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
-			<DCC_Platform>x86</DCC_Platform>
-			<DCC_DependencyCheckOutputName>C:\Users\Public\Documents\RAD Studio\7.0\Bpl\PngComponentsDesign140.bpl</DCC_DependencyCheckOutputName>
-			<DCC_Description>Png components designtime</DCC_Description>
+			<DCC_ImageBase>00400000</DCC_ImageBase>
 			<DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
+			<DCC_DebugInformation>false</DCC_DebugInformation>
+			<DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
+			<DCC_UnitAlias>WinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;WinTypes=Windows;WinProcs=Windows;$(DCC_UnitAlias)</DCC_UnitAlias>
+			<RuntimeOnlyPackage>true</RuntimeOnlyPackage>
+			<DCC_Description>Png Components</DCC_Description>
 			<DCC_N>false</DCC_N>
 			<DCC_K>false</DCC_K>
 			<GenDll>true</GenDll>
 			<DCC_S>false</DCC_S>
-			<DCC_DcuOutput>..\D15</DCC_DcuOutput>
+			<DCC_DcuOutput>..\D15\$(Config)</DCC_DcuOutput>
 			<GenPackage>true</GenPackage>
 			<DCC_F>false</DCC_F>
 			<DCC_E>false</DCC_E>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Cfg_1)'!=''">
-			<DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
 			<DCC_Define>RELEASE;$(DCC_Define)</DCC_Define>
-			<DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
-			<DCC_DebugInformation>false</DCC_DebugInformation>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Cfg_2)'!=''">
 			<DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
+			<DCC_Optimize>false</DCC_Optimize>
+			<DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
 		</PropertyGroup>
 		<ItemGroup>
-			<DelphiCompile Include="PngComponentsDesign.dpk">
+			<DelphiCompile Include="PngComponents.dpk">
 				<MainSource>MainSource</MainSource>
 			</DelphiCompile>
-			<DCCReference Include="..\Design\PngComponents.dcr"/>
-			<DCCReference Include="designide.dcp"/>
-			<DCCReference Include="PngComponents.dcp"/>
-			<DCCReference Include="..\Design\PngComponentsRegister.pas"/>
-			<DCCReference Include="..\Design\PngComponentEditors.pas"/>
-			<DCCReference Include="..\Design\PngImageListEditor.pas">
-				<Form>PngImageListEditorDlg</Form>
-			</DCCReference>
+			<DCCReference Include="vclactnband.dcp"/>
+			<DCCReference Include="vcl.dcp"/>
+			<DCCReference Include="rtl.dcp"/>
+			<DCCReference Include="vclimg.dcp"/>
+			<DCCReference Include="..\Source\PngSpeedButton.pas"/>
+			<DCCReference Include="..\Source\PngFunctions.pas"/>
+			<DCCReference Include="..\Source\PngImageList.pas"/>
+			<DCCReference Include="..\Source\PngBitBtn.pas"/>
+			<DCCReference Include="..\Source\PngButtonFunctions.pas"/>
+			<DCCReference Include="..\Source\PngCheckListBox.pas"/>
 			<BuildConfiguration Include="Debug">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
@@ -83,9 +83,8 @@
 			<BorlandProject>
 				<Delphi.Personality>
 					<Source>
-						<Source Name="MainSource">PngComponentsDesign.dpk</Source>
+						<Source Name="MainSource">PngComponents.dpk</Source>
 					</Source>
-					<Parameters/>
 					<VersionInfo>
 						<VersionInfo Name="IncludeVerInfo">True</VersionInfo>
 						<VersionInfo Name="AutoIncBuild">False</VersionInfo>
@@ -103,12 +102,12 @@
 					</VersionInfo>
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName"/>
-						<VersionInfoKeys Name="FileDescription">Png Components Design Time</VersionInfoKeys>
+						<VersionInfoKeys Name="FileDescription">Png Components Runtime</VersionInfoKeys>
 						<VersionInfoKeys Name="FileVersion">1.2.0.0</VersionInfoKeys>
-						<VersionInfoKeys Name="InternalName">PngComponentsDesign</VersionInfoKeys>
+						<VersionInfoKeys Name="InternalName">PngComponents</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalCopyright"/>
 						<VersionInfoKeys Name="LegalTrademarks"/>
-						<VersionInfoKeys Name="OriginalFilename">PngComponentsDesign</VersionInfoKeys>
+						<VersionInfoKeys Name="OriginalFilename">PngComponents</VersionInfoKeys>
 						<VersionInfoKeys Name="ProductName">Png Components</VersionInfoKeys>
 						<VersionInfoKeys Name="ProductVersion">1</VersionInfoKeys>
 						<VersionInfoKeys Name="Comments"/>
