fixed Build Group for XE8

--- a/PackagesXE8/PngComponents.dproj
+++ b/PackagesXE8/PngComponents.dproj
@@ -83,7 +83,7 @@
         <VerInfo_MinorVer>2</VerInfo_MinorVer>
         <DCC_ImageBase>00400000</DCC_ImageBase>
         <DCC_DebugInformation>0</DCC_DebugInformation>
-        <DllSuffix>210</DllSuffix>
+        <DllSuffix>220</DllSuffix>
         <DCC_DependencyCheckOutputName>C:\Users\Public\Documents\RAD Studio\7.0\Bpl\PngComponents140.bpl</DCC_DependencyCheckOutputName>
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
         <DCC_Platform>x86</DCC_Platform>
@@ -152,6 +152,7 @@
         <DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
+        <VerInfo_MinorVer>0</VerInfo_MinorVer>
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
@@ -226,6 +227,8 @@
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k220.bpl">Microsoft Office 2000 Beispiele für gekapselte Komponenten für Automatisierungsserver</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp220.bpl">Microsoft Office XP Beispiele für gekapselte Komponenten für Automation Server</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\bcboffice2k220.bpl">Embarcadero C++Builder-Package für Office 2000-Server</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\bcbofficexp220.bpl">Embarcadero C++Builder-Package für Office XP-Server</Excluded_Packages>
                 </Excluded_Packages>
             </Delphi.Personality>
             <Platforms>
