Saved with 12.1 and added .gitattributes for CRLF.

--- a/Packages/11AndAbove/Delphi/PngComponentsD.dproj
+++ b/Packages/11AndAbove/Delphi/PngComponentsD.dproj
@@ -9,6 +9,7 @@
         <MainSource>PngComponentsD.dpk</MainSource>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <ProjectGuid>{A567FA24-8D23-4C0B-9AD6-102B2A1F6D0B}</ProjectGuid>
+        <ProjectName Condition="'$(ProjectName)'==''">PngComponentsD</ProjectName>
         <ProjectVersion>20.1</ProjectVersion>
         <TargetedPlatforms>3</TargetedPlatforms>
     </PropertyGroup>
