--- a/Packages/11AndAbove/Delphi/PngComponentsDDesign.dproj
+++ b/Packages/11AndAbove/Delphi/PngComponentsDDesign.dproj
@@ -9,6 +9,7 @@
         <MainSource>PngComponentsDDesign.dpk</MainSource>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <ProjectGuid>{B3C4180B-520B-41C8-8853-0351F059AA78}</ProjectGuid>
+        <ProjectName Condition="'$(ProjectName)'==''">PngComponentsDDesign</ProjectName>
         <ProjectVersion>20.1</ProjectVersion>
         <TargetedPlatforms>1</TargetedPlatforms>
     </PropertyGroup>
